[gd_scene load_steps=6 format=3 uid="uid://0k2s278w6c5x"]

[ext_resource type="Script" uid="uid://vq5aywt1l3me" path="res://scripts/game_over.gd" id="1_wqhvx"]
[ext_resource type="FontFile" uid="uid://dppr83sl30x4e" path="res://assets/Font/Kenney Future.ttf" id="1_xeevv"]
[ext_resource type="Theme" uid="uid://dsw63j6va7usr" path="res://assets/ui_theme.tres" id="3_tbwuq"]

[sub_resource type="Gradient" id="Gradient_tbwuq"]
colors = PackedColorArray(0, 0, 0, 1, 0.784314, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_racf3"]
gradient = SubResource("Gradient_tbwuq")
fill_to = Vector2(0, 5)
metadata/_snap_count = 2

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wqhvx")

[node name="GradientBG" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_racf3")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 24

[node name="GameOverLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_xeevv")
theme_override_font_sizes/font_size = 32
text = "Game Over"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="StatScore" type="Label" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "text"
horizontal_alignment = 1

[node name="StatMetors" type="Label" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "text"
horizontal_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="BtnRestart" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_tbwuq")
text = "Restart"

[node name="BtnMenu" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_tbwuq")
text = "Main Menu"

[connection signal="button_up" from="VBoxContainer/BtnRestart" to="." method="_on_btn_restart_button_up"]
[connection signal="button_up" from="VBoxContainer/BtnMenu" to="." method="_on_btn_menu_button_up"]
